# handler/v1/product.go
@@ -44,3 +44,33 @@ func (product) GetList(c *gin.Context) {
 		JSON(c, resp.Body)
 	}
 }
+
+// swagger:parameters Product_AttributeItems
+type ProductAttributeItemsArgs struct {
+	// 1: 获取商品分类选项
+	// 2: 获取口味选项
+	Id int `json:"id" form:"id"`
+}
+
+// 商品分类和属性
+// swagger:response ProductAttributeItemsResp
+type ProductAttributeItemsResp struct {
+	// in: body
+	Body []*models.AttributeItem
+}
+
+// swagger:route GET /product/attribute/items 商品 Product_AttributeItems
+// responses:
+//     200: ProductAttributeItemsResp
+func (product) AttributeItems(c *gin.Context) {
+	var args ProductAttributeItemsArgs
+	if c.Bind(&args) != nil {
+		return
+	}
+	list, err := models.AttributeItemDefault.GetByAttributeID(args.Id)
+	if err != nil {
+		JSON(c, err)
+	} else {
+		JSON(c, list)
+	}
+}
